--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sort-typescript-imports",
   "displayName": "Sort Typescript Imports",
   "description": "Sorts import statements in Typescript code",
-  "version": "1.4.1",
+  "version": "1.4.3",
   "publisher": "miclo",
   "license": "MIT",
   "icon": "images/icon.png",
@@ -91,6 +91,16 @@
           ],
           "default": "single"
         },
+        "typescript.extension.sortImports.sortMembers": {
+          "type": "string",
+          "description": "import {a, c, b}... -> import {a, b, c}...",
+          "enum": [
+            "asc",
+            "desc",
+            "none"
+          ],
+          "default": "asc"
+        },
         "typescript.extension.sortImports.sortOnSave": {
           "type": "boolean",
           "description": "Whether to sort all imports whenever saving a Typescript file",
@@ -154,10 +164,10 @@
     "test": "node ./node_modules/vscode/bin/test"
   },
   "devDependencies": {
-    "typescript": "^2.0.3",
-    "vscode": "^1.0.0",
-    "mocha": "^2.3.3",
+    "@types/mocha": "^2.2.32",
     "@types/node": "^6.0.40",
-    "@types/mocha": "^2.2.32"
+    "mocha": "^2.3.3",
+    "typescript": "^2.0.3",
+    "vscode": "^1.1.37"
   }
 }
